# owhan-gs

./: pyproject.toml  train_embedding.py
