[project]
name = "owhan-gs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapy>=1.2.4",
    "open3d>=0.19.0",
    "plyfile>=1.1.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "trimesh>=4.6.10",
]
